CheckIn: Refactor the codes for the plugin "org.eclipse.birt.report.data.oda.jdbc" according to the results of FindBugs.